force-app/main/default/objects/Loan_Event__e/Loan_Event__e.object-meta.xml
<CustomObject>
    <label>Loan Event</label>
    <pluralLabel>Loan Events</pluralLabel>
</CustomObject>