force-app/main/default/objects/Loan_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Text</type>
    <length>50</length>
</CustomField>