force-app/main/default/objects/Loan_Event__e/fields/Loan_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Id__c</fullName>
    <label>Loan Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>