force-app/main/default/objects/Loan_Event__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>